--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,30 @@
 <div class="container">
-    <div class="row">
+    <div class="row mb-5">
         <div class="mx-auto mt-5">
-            <h1>Idiomatic Rust</h1>
-            <h3 class="mt-3">The future is fast, reliable, and secure. It's called <a href="https://www.rust-lang.org/">Rust</a>. The future is now.</h3>
+            <h1><a href="https://idiomatic-rust.com/">Idiomatic Rust</a></h1>
+            <h3 class="mt-3">The future is fast, reliable, and secure. It's called <a href="https://www.rust-lang.org/">Rust</a>. The future is here.</h3>
         </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <h5>Company contact</h5>
+            <address>
+                <strong>Event Horizon Labs</strong><br>
+                Michał Piotrowski<br>
+                43-512 Janowice ul. Pisarzowicka 21 Poland
+            </address>
+            <address>
+                <abbr title="Phone"><i class="bi bi-telephone"></i></abbr> (+48) 881 573 056<br>
+                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a href='&#109;ai&#108;t&#111;&#58;mi&#37;6&#51;ha&#108;&#64;&#101;ve&#37;6Et&#104;&#111;&#114;i%7A%&#54;Fnla%6&#50;s&#46;&#37;&#54;&#53;%7&#53;'>mich&#97;l&#64;&#101;&#118;entho&#114;izonlab&#115;&#46;&#101;u</a><br>
+            </address>
+            <ul class="list-unstyled">
+                <li>
+                    <a href="https://github.com/idiomaticrust"><i class="bi bi-github"></i> Github</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="text-center">
+        <p>Copyright &copy; 2022 Event Horizon Labs</p>
     </div>
 </div>
