--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,33 @@
-<div class="container">
-    <div class="row mb-5">
-        <div class="mx-auto mt-5">
-            <h1><a href="https://idiomatic-rust.com/">Idiomatic Rust</a></h1>
-            <h3 class="mt-3">The future is fast, reliable, and secure. It's called <a href="https://www.rust-lang.org/">Rust</a>. The future is here.</h3>
-        </div>
-    </div>
+<div class="container font-family-fira-sans">
     <div class="row mt-5">
+        <h1 class="font-family-alfa-slab-one fs-96px fw-light">Idiomatic Rust</h1>
+        <h2 class="fs-36px fw-light mt-3">The future is fast, reliable, and secure. It's called <a class="font-family-alfa-slab-one" href="https://www.rust-lang.org/">Rust</a>. The future is here.</h2>
+    </div>
+    <div class="row mt-4">
+        <h3 class="fs-27px fw-light">
+            Event Horizon Labs offers Rust programming services. We follow the best practices of idiomatic Rust.
+        </h3>
+    </div>
+    <div class="row mt-4 fs-18px">
         <div class="col-md-12">
-            <h5>Company contact</h5>
+            <h3 class="fs-27px">Company contact</h3>
             <address>
                 <strong>Event Horizon Labs</strong><br>
                 Michał Piotrowski<br>
-                43-512 Janowice ul. Pisarzowicka 21 Poland
+                ul. Pisarzowicka 21, 43-512 Janowice, Poland
             </address>
             <address>
-                <abbr title="Phone"><i class="bi bi-telephone"></i></abbr> (+48) 881 573 056<br>
-                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a href='&#109;ai&#108;t&#111;&#58;mi&#37;6&#51;ha&#108;&#64;&#101;ve&#37;6Et&#104;&#111;&#114;i%7A%&#54;Fnla%6&#50;s&#46;&#37;&#54;&#53;%7&#53;'>mich&#97;l&#64;&#101;&#118;entho&#114;izonlab&#115;&#46;&#101;u</a><br>
+                <abbr title="Phone"><i class="bi bi-telephone"></i></abbr> <span class="ms-2">(+48) 881 573 056</span><br>
+                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a class="ms-2" href='&#109;ailto&#58;mic%&#54;8al&#64;&#105;di&#111;m%6&#49;tic-r&#117;&#115;t&#46;&#37;63om'>m&#105;chal&#64;idi&#111;m&#97;&#116;&#105;c-r&#117;&#115;t&#46;c&#111;m</a><br>
             </address>
             <ul class="list-unstyled">
                 <li>
-                    <a href="https://github.com/idiomaticrust"><i class="bi bi-github"></i> Github</a>
+                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/idiomatic-rust-com">GitHub</a>
                 </li>
             </ul>
         </div>
     </div>
-    <div class="text-center">
+    <div class="text-center fs-18px">
         <p>Copyright &copy; 2022 Event Horizon Labs</p>
     </div>
 </div>
