--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
-@import url('http://fonts.cdnfonts.com/css/alfa-slab-one');
-@import url('http://fonts.cdnfonts.com/css/fira-sans');
+@import url('https://fonts.cdnfonts.com/css/alfa-slab-one');
+@import url('https://fonts.cdnfonts.com/css/fira-sans');
 
 // Variables
 //
