--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
                 <li>
                     <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/idiomatic-rust-com">GitHub</a>
                 </li>
+                <li>
+                    <i class="bi bi-twitter"></i> <a class="ms-2" href="https://twitter.com/idiomatic_rust">@idiomatic_rust</a>
+                </li>
             </ul>
         </div>
     </div>
