--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
+@import "~bootstrap/scss/mixins/banner";
+@include bsBanner("");
+
 // scss-docs-start import-stack
 // Configuration
 @import "~bootstrap/scss/functions";
 @import "variables";
+@import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
 
