#10 hidden cv page p1
 #10 hidden cv page p2

 #10 hidden cv page p3

 #10 hidden cv page p4

 #10 hidden cv page p5

 #10 hidden cv page p6

 #10 hidden cv page p7

 #10 hidden cv page p8

 #10 hidden cv page p9

 #10 hidden cv page p10

 #10 hidden cv page p11

 #10 hidden cv page p12

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,1 @@
-<div class="container font-family-fira-sans">
-    <div class="row mt-5">
-        <h1 class="font-family-alfa-slab-one fs-96px fw-light">Idiomatic Rust</h1>
-        <h2 class="fs-36px fw-light mt-3">The future is fast, reliable, and secure. It's called <a class="font-family-alfa-slab-one" href="https://www.rust-lang.org/">Rust</a>. The future is here.</h2>
-    </div>
-    <div class="row mt-4">
-        <h3 class="fs-27px fw-light">
-            Event Horizon Labs offers Rust programming services. We follow the best practices of idiomatic Rust.
-        </h3>
-    </div>
-    <div class="row mt-4 fs-18px">
-        <div class="col-md-12">
-            <h3 class="fs-27px">Company contact</h3>
-            <address>
-                <strong>Event Horizon Labs</strong><br>
-                Michał Piotrowski<br>
-                ul. Pisarzowicka 21, 43-512 Janowice, Poland
-            </address>
-            <address>
-                <abbr title="Phone"><i class="bi bi-telephone"></i></abbr> <span class="ms-2">(+48) 881 573 056</span><br>
-                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a class="ms-2" href='&#109;ailto&#58;mic%&#54;8al&#64;&#105;di&#111;m%6&#49;tic-r&#117;&#115;t&#46;&#37;63om'>m&#105;chal&#64;idi&#111;m&#97;&#116;&#105;c-r&#117;&#115;t&#46;c&#111;m</a><br>
-            </address>
-            <ul class="list-unstyled">
-                <li>
-                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/idiomatic-rust-com">GitHub</a>
-                </li>
-                <li>
-                    <i class="bi bi-twitter"></i> <a class="ms-2" href="https://twitter.com/idiomatic_rust">@idiomatic_rust</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="text-center fs-18px">
-        <p>Copyright &copy; 2023 Event Horizon Labs</p>
-    </div>
-</div>
+<router-outlet></router-outlet>
