--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -50,6 +50,7 @@ $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 $rust-green: #0b7261 !default;
+$rust-purple: #2e2459 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -303,7 +304,7 @@ $cyans: (
 
 // scss-docs-start theme-color-variables
 $primary:       $rust-green !default;
-$secondary:     $gray-600 !default;
+$secondary:     $rust-purple !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -1447,9 +1448,9 @@ $alert-margin-bottom:           1rem !default;
 $alert-border-radius:           $border-radius !default;
 $alert-link-font-weight:        $font-weight-bold !default;
 $alert-border-width:            $border-width !default;
-$alert-bg-scale:                -80% !default;
+$alert-bg-scale:                0% !default;
 $alert-border-scale:            -70% !default;
-$alert-color-scale:             40% !default;
+$alert-color-scale:             10% !default;
 $alert-dismissible-padding-r:   $alert-padding-x * 3 !default; // 3x covers width of x plus default padding on either side
 // scss-docs-end alert-variables
 
