--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -83,6 +83,10 @@
                 <span class="badge bg-secondary mx-2 my-2">Apache HTTPD</span>
                 <span class="badge bg-secondary mx-2 my-2">nginx</span>
                 <span class="badge bg-secondary mx-2 my-2">Varnish Cache</span>
+                <span class="badge bg-secondary mx-2 my-2">Docker</span>
+                <span class="badge bg-secondary mx-2 my-2">docker-compose</span>
+                <span class="badge bg-secondary mx-2 my-2">Kubernetes</span>
+                <span class="badge bg-secondary mx-2 my-2">Istio</span>
             </div>
         </div>
     </div>
@@ -91,35 +95,115 @@
         <p class="mt-3">Over the last 14 years, my company has delivered programming services to a diverse clientele of companies and individuals.</p>
         <p>I've completed 29 projects for 23 clients via the <a href="https://www.upwork.com/freelancers/~01a20a8329d97ef690?viewMode=1">Upwork</a> platform, and 8 projects in direct cooperation with clients.</p>
         <p>I am experienced in developing applications for various industries, including fintech (insurance, loans, money transfers, mortgage), reg tech, auction/tender systems, real estate, social networks, content management systems, and e-commerce.</p>
-        <div class="row">
+        <div class="row my-3">
             <h4>2021 -</h4>
             <p>
                 Event Horizon Labs - my new company in Poland.
             </p>
+            <div class="ms-5">
+                Key development project contracts:
+                <ul class="ms-5">
+                    <li>2022 - 2023 - The Daily Edit (AI-powered news platform)</li>
+                    <li>2021 - Delodi
+                        <ul>
+                            <li>2021 - LOOMPACT (impact)</li>
+                            <li>2021 - ZFK (communication platform)</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="row">
+        <div class="row my-3">
             <h4>2017 - 2020</h4>
             <p>
-                Event Horizon Labs LLP - my company in United Kingdom.
+                Event Horizon Labs LLP - my company in the United Kingdom.
             </p>
+            <div class="ms-5">
+                Key development project contracts (including some that were started by PL company):
+                <ul class="ms-5">
+                    <li>2019 - Studio RVB SPRL - kick-cancer (charity fundraising)</li>
+                    <li>2018 - 2020 - TR Technologies - TalkRemit (FinTech)</li>
+                    <li>2018 - ILIONA - WonderCoach (video streaming)</li>
+                    <li>2018 - 7 days Performance (gambling)</li>
+                    <li>2017 - TruMyle Ltd (InsureTech)</li>
+                    <li>2017 - 2018 - ClickyHomes (real estate platform)</li>
+                    <li>2016 - 2021 - LOEVGAARD ApS
+                        <ul>
+                            <li>2017 - 2trendy (e-commerce)</li>
+                            <li>2017 - Luksusmarkiser (e-commerce)</li>
+                            <li>2017 - Lykke by Lykke (e-commerce)</li>
+                            <li>2016 - 2021 - Markiseeksperten (e-commerce)</li>
+                            <li>2016 - 2017 - Smsit (messaging platform)</li>
+                        </ul>
+                    </li>
+                    <li>2016 - 2018 - HCCO Retail Ltd. - Renowaze (contractor hire platform)</li>
+                </ul>
+            </div>
         </div>
-        <div class="row">
+        <div class="row my-3">
             <h4>2010 - 2016</h4>
             <p>
                 Event Horizon - my first company in Poland.
             </p>
+            <div class="ms-5">
+                Key development project contracts:
+                <ul class="ms-5">
+                    <li>
+                        2015 - 2016 - Studio RVB SPRL
+                        <ul>
+                            <li>2016 - KAZAWAX SA (e-commerce)</li>
+                            <li>2015 - 2016 - Centrale d'achats (e-commerce)</li>
+                        </ul>
+                    </li>
+                    <li>
+                        2015 - 2016 - Treeli
+                        <ul>
+                            <li>2016 - Rentlii (renting platform)</li>
+                            <li>2015 - 2016 - MyTreeTop (CRM platform)</li>
+                        </ul>
+                    </li>
+                    <li>2015 - eyeOpen (FinTech)</li>
+                    <li>2015 - Docecode Corporation - new SurexDirect platform (InsureTech)</li>
+                    <li>2014 - 2015 - A. Ziara - Sockam (social network)</li>
+                    <li>2014 - Aurovine (music platform)</li>
+                    <li>
+                        2014 - Solsken
+                        <ul>
+                            <li>2014 - database project</li>
+                            <li>2014 - catalog platform</li>
+                        </ul>
+                    </li>
+                    <li>2013 - 2014 - Black Onyx LLC - GameLock (selling/reselling platform)</li>
+                    <li>2012 - 2013 - ImPro - Compliant Suppliers (RegTech)</li>
+                    <li>2012 - Chess.com - ChessKid (online game)</li>
+                    <li>2012 - Appsflower (low code framework)</li>
+                    <li>2010 - 2012 - IMSoft/ProoxEnginering/EMOST.PL - EMOST (auction/tender platform)</li>
+                    <li>2009 - 2010 - eLoans (FinTech)</li>
+                </ul>
+            </div>
         </div>
-        <div class="row">
+        <div class="row my-3">
             <h4>2009 - 2009</h4>
             <p>
                 JBR Rogowiec - I worked there on Dealer Management System.
             </p>
         </div>
-        <div class="row">
+        <div class="row my-3">
             <h4>2008 - 2009</h4>
             <p>
                 I attempted to develop my own product.
             </p>
+        </div>
+        <div class="row my-3">
+            <p>
+                In addition to my professional work, I have pursued multiple personal projects spanning various fields:
+            </p>
+            <ul class="ms-5">
+                <li>AI</li>
+                <li>blockchain</li>
+                <li>game dev</li>
+                <li>web dev</li>
+            </ul>
         </div>
     </div>
     <div class="fs-27px row my-5">
