--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -7,14 +7,14 @@
                 Developer with 15 years of experience in developing web applications. Experienced in using Rust to build scalable and reliable web systems. Skilled in delivering robust, tested, and maintainable code.
             </p>
             <p class="fs-20px">
-                Demo code <a href="https://github.com/idiomatic-rust-com/alex-db">https://github.com/idiomatic-rust-com/alex-db</a>
+                Demo code <a href="https://github.com/asyncfn/alex-db">https://github.com/asyncfn/alex-db</a>
             </p>
         </div>
         <div class="col fs-18px">
             <div class="alert alert-success" role="alert">
                 <ul class="list-unstyled my-3 mx-3">
                     <li>
-                        <i class="bi bi-envelope"></i> <a class="ms-2 link-light" href='&#109;ailto&#58;mic%&#54;8al&#64;&#105;di&#111;m%6&#49;tic-r&#117;&#115;t&#46;&#37;63om'>m&#105;chal&#64;idi&#111;m&#97;&#116;&#105;c-r&#117;&#115;t&#46;c&#111;m</a>
+                        <i class="bi bi-envelope"></i> <a class="ms-2 link-light" href='m&#97;&#105;l&#116;&#111;&#58;&#97;%&#55;3&#121;nc%&#54;6n&#46;co&#109;&#64;&#103;m&#97;i&#108;%&#50;Ecom'>asyncfn&#46;&#99;o&#109;&#64;gmail&#46;com</a>
                     </li>
                     <li class="mt-3">
                         <i class="bi bi-telephone"></i> <span class="ms-2">(+48) 881 573 056</span>
@@ -23,7 +23,7 @@
                         <i class="bi bi-geo-alt"></i> <span class="ms-2">Janowice, Poland</span>
                     </li>
                     <li class="mt-3">
-                        <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/idiomatic-rust-com">https://github.com/idiomatic-rust-com</a>
+                        <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/asyncfn">https://github.com/asyncfn</a>
                     </li>
                     <li class="mt-3">
                         <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/eventhorizonpl">https://github.com/eventhorizonpl (older account)</a>
