--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="container font-family-fira-sans">
     <div class="row mt-5">
-        <h1 class="font-family-alfa-slab-one fs-96px fw-light">Idiomatic Rust</h1>
+        <h1 class="font-family-alfa-slab-one fs-96px fw-light">async fn</h1>
         <h2 class="fs-36px fw-light mt-3">The future is fast, reliable, and secure. It's called <a class="font-family-alfa-slab-one" href="https://www.rust-lang.org/">Rust</a>. The future is here.</h2>
     </div>
     <div class="row mt-4">
@@ -18,14 +18,14 @@
             </address>
             <address>
                 <abbr title="Phone"><i class="bi bi-telephone"></i></abbr> <span class="ms-2">(+48) 881 573 056</span><br>
-                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a class="ms-2" href='&#109;ailto&#58;mic%&#54;8al&#64;&#105;di&#111;m%6&#49;tic-r&#117;&#115;t&#46;&#37;63om'>m&#105;chal&#64;idi&#111;m&#97;&#116;&#105;c-r&#117;&#115;t&#46;c&#111;m</a><br>
+                <abbr title="Email"><i class="bi bi-envelope"></i></abbr> <a class="ms-2" href='m&#97;&#105;l&#116;&#111;&#58;&#97;%&#55;3&#121;nc%&#54;6n&#46;co&#109;&#64;&#103;m&#97;i&#108;%&#50;Ecom'>asyncfn&#46;&#99;o&#109;&#64;gmail&#46;com</a><br>
             </address>
             <ul class="list-unstyled">
                 <li>
-                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/idiomatic-rust-com">GitHub</a>
+                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/asyncfn">GitHub</a>
                 </li>
                 <li>
-                    <i class="bi bi-twitter"></i> <a class="ms-2" href="https://twitter.com/idiomatic_rust">@idiomatic_rust</a>
+                    <i class="bi bi-twitter"></i> <a class="ms-2" href="https://twitter.com/asyncfncom">@asyncfncom</a>
                 </li>
             </ul>
         </div>
