update repo urls

--- a/src/app/components/cv/cv.component.html
+++ b/src/app/components/cv/cv.component.html
@@ -7,7 +7,7 @@
                 Developer with 15 years of experience in developing web applications. Experienced in using Rust to build scalable and reliable web systems. Skilled in delivering robust, tested, and maintainable code.
             </p>
             <p class="fs-20px">
-                Demo code <a href="https://github.com/asyncfn/alex-db">https://github.com/asyncfn/alex-db</a>
+                Demo code <a href="https://github.com/asyncfncom/alex-db">https://github.com/asyncfncom/alex-db</a>
             </p>
         </div>
         <div class="col fs-18px">
@@ -23,7 +23,7 @@
                         <i class="bi bi-geo-alt"></i> <span class="ms-2">Janowice, Poland</span>
                     </li>
                     <li class="mt-3">
-                        <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/asyncfn">https://github.com/asyncfn</a>
+                        <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/asyncfncom">https://github.com/asyncfncom</a>
                     </li>
                     <li class="mt-3">
                         <i class="bi bi-github"></i> <a class="ms-2 link-light" href="https://github.com/eventhorizonpl">https://github.com/eventhorizonpl (older account)</a>
