--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -22,7 +22,7 @@
             </address>
             <ul class="list-unstyled">
                 <li>
-                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/asyncfn">GitHub</a>
+                    <i class="bi bi-github"></i> <a class="ms-2" href="https://github.com/asyncfncom">GitHub</a>
                 </li>
                 <li>
                     <i class="bi bi-twitter"></i> <a class="ms-2" href="https://twitter.com/asyncfncom">@asyncfncom</a>
